# Colbex-Ide

./: .env  LICENSE  README.md  bun.conf  package-lock.json  package.json  tailwind.config.js  test-file.txt  test-icons.js  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
.kiro/steering/: product.md  structure.md  tech.md
.timeline/06a4d75d96271d6b/: meta.json
.timeline/0eb547304658805a/: meta.json
.timeline/26ad4b834941d9b1/: meta.json
.timeline/44dad1db3fc477eb/: meta.json
.timeline/60f5dcfc15327d5d/: meta.json
.timeline/7ae45ad102eab3b6/: meta.json
.timeline/bc1fe1a215f362b2/: meta.json
src/: App.css  App.module.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  colbex.desktop  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: agentrouter.rs  anthropic.rs  api_keys.rs  git_commands.rs  google.rs  lib.rs  lib.rs.backup  main.rs  npm.rs  ollama.rs  openai.rs  proxy_config.rs  xai.rs
src-tauri/src/command_palette/: commands.rs  defaults.rs  fuzzy.rs  mod.rs  registry.rs  types.rs
src-tauri/src/fs/: commands.rs  glob_utils.rs  mod.rs  search.rs  types.rs
src-tauri/src/git/: mod.rs  push.rs
src-tauri/src/keybindings/: commands.rs  defaults.rs  mod.rs  store.rs  types.rs  utils.rs
src-tauri/src/outline/: mod.rs  parser.rs
src-tauri/src/ports/: mod.rs
src-tauri/src/problems/: mod.rs
src-tauri/src/session/: commands.rs  defaults.rs  mod.rs  store.rs  types.rs
src-tauri/src/settings/: commands.rs  defaults.rs  mod.rs  store.rs  types.rs  validation.rs  watcher.rs
src-tauri/src/terminal/: mod.rs  session.rs  shell.rs  types.rs
src-tauri/src/timeline/: history.rs  mod.rs  types.rs
src/components/ai/: AIAssistant.module.css  AIAssistant.tsx  HistoryModal.module.css  HistoryModal.tsx  index.ts
src/components/layout/: ActivityBar.module.css  ActivityBar.tsx  AudioViewer.tsx  BranchModal.module.css  BranchModal.tsx  BreadcrumbBar.module.css  BreadcrumbBar.tsx  CommandPalette.module.css  CommandPalette.tsx  CustomIcons.tsx  Editor.module.css  Editor.tsx  FileSelector.module.css  FileSelector.tsx  ImageViewer.module.css  ImageViewer.tsx  MenuBar.module.css  MenuBar.tsx  NewFileModal.module.css  NewFileModal.tsx  Sidebar.module.css  Sidebar.tsx  StatusBar.tsx  TabActions.module.css  TabActions.tsx  Tabs.tsx  (+4 more)
src/hooks/: useResizablePanel.ts  useSettings.ts
src/lib/: monaco-config.ts  settings-api.ts  tauri-api.ts
src/store/: aiStore.ts  autoSaveStore.ts  diagnosticsStore.ts  editorStore.ts  gitStore.ts  index.ts  outlineStore.ts  projectStore.ts  searchStore.ts  terminalStore.ts  timelineStore.ts  uiStore.ts
src/themes/: index.ts  monaco-themes.ts
src/utils/: fileIcons.tsx  search.ts
(+144 files in other folders)
