[package]
name = "colbex"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "colbex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-decorum = "0.1.2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.20"
walkdir = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking", "stream"] }
thiserror = "2"
anyhow = "1"
regex = "1"
globset = "0.4"
rayon = "1.10"
ignore = "0.4"
memmap2 = "0.9"
grep-searcher = "0.1"
grep-regex = "0.1"
grep-matcher = "0.1"
num_cpus = "1.16"
portable-pty = "0.9"
alacritty_terminal = "0.25"
uuid = { version = "1", features = ["v4", "serde"] }
md-5 = "0.10"
notify = "6"
futures-util = "0.3"
oxc_allocator = "0.56"
oxc_parser = "0.56"
oxc_ast = "0.56"
oxc_span = "0.56"
oxc_syntax = "0.56"
oxc_ast_visit = "0.56"
chrono = "0.4"
flate2 = "1"
sha2 = "0.10"
lazy_static = "1"
dirs = "5"
